name:                mapview
version:             2.0.2
synopsis:            View coordinates received via telemetry on a map in realtime. (Currently only RTTY)
homepage:            https://github.com/noexc/mapview
license:             MIT
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2014 Ricky Elrod <ricky@elrod.me>
category:            KD8ZRC
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     KD8ZRC.Mapview.Parser
                     , KD8ZRC.Mapview.Types
  build-depends:
      aeson >= 0.7
    , base > 4 && < 5
    , configurator >= 0.3
    , directory >= 1.2
    , lens >= 4.4 && < 5
    , linear >= 1.10 && < 2
    , old-locale >= 1.0
    , optparse-applicative >= 0.9
    , text >= 1.1
    , thyme >= 0.3.5 && < 0.4
    , trifecta >= 1.4.3 && < 2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -threaded

executable mapview-rttyparser
  main-is:             mapview-rttyparser.hs
  build-depends:
      aeson >= 0.7
    , ansi-wl-pprint >= 0.6.7 && < 0.7
    , base > 4 && < 5
    , bytestring >= 0.10
    , configurator >= 0.3
    , directory >= 1.2
    , lens >= 4.4 && < 5
    , lens-aeson >= 1 && < 2
    , linear >= 1.10 && < 2
    , mtl > 2.1 && < 2.3
    , old-locale >= 1.0
    , optparse-applicative >= 0.9
    , parsers >= 0.11.0.3 && < 0.13
    , shelly >= 1.5
    , strict >= 0.3.2
    , text >= 1.1
    , thyme >= 0.3.5 && < 0.4
    , transformers >= 0.4 && < 0.5
    , trifecta >= 1.4.3 && < 2
    , unix >= 2.7
    , comonad
    , mapview

  default-language:    Haskell2010
  ghc-options: -Wall -Werror -threaded -O2

executable mapview-send
  main-is:             mapview-send.hs
  build-depends:
      base > 4 && < 5
    , configurator >= 0.3
    , directory >= 1.2
    , entropy >= 0.3 && < 0.3.4
    , fsnotify >= 0.1
    , optparse-applicative >= 0.9
    , system-filepath >= 0.4
    , text >= 1.1
    , transformers >= 0.4 && < 0.5
    , uuid >= 1.3
    , websockets >= 0.8.2.5
    , mapview

  default-language:    Haskell2010
  ghc-options: -Wall -Werror -threaded -O2

executable mapview-generate-charts
  main-is:             mapview-generate-charts.hs
  build-depends:
      base > 4 && < 5
    , Chart >= 1.3 && < 1.4
    , Chart-diagrams >= 1.3 && < 1.4
    , configurator >= 0.3
    , lens >= 4.4 && < 5
    , linear >= 1.10 && < 2
    , optparse-applicative >= 0.9
    , parsers >= 0.11.0.3 && < 0.13
    , thyme >= 0.3.5 && < 0.4
    , trifecta >= 1.4.3 && < 2
    , mapview

test-suite hlint
  hs-source-dirs: tests
  main-is: hlint.hs
  type: exitcode-stdio-1.0
  ghc-options: -Wall -rtsopts -with-rtsopts=-N -threaded
  default-language: Haskell2010
  build-depends:
      base
    , hlint >= 1.8
