name:                mapview
version:             3
synopsis:            View coordinates received via telemetry on a map in realtime.
homepage:            https://github.com/noexc/mapview
license:             MIT
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2015 Ricky Elrod <ricky@elrod.me>
category:            KD8ZRC
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     KD8ZRC.Mapview.Execute
                     , KD8ZRC.Mapview.Types
                     , KD8ZRC.Mapview.Utility.Concurrent
                     , KD8ZRC.Mapview.Utility.Coordinates
                     , KD8ZRC.Mapview.Utility.CRC
                     , KD8ZRC.Mapview.Utility.Downlink
                     , KD8ZRC.Mapview.Utility.Logging
  build-depends:
      aeson >= 0.7
    , ansi-terminal >= 0.5 && < 0.7
    , ansi-wl-pprint >= 0.6 && < 0.7
    , base > 4 && < 5
    , bytestring >= 0.10
    , configurator >= 0.3
    , coordinate >= 0.0.15 && < 0.1
    , crc16 >= 0.1 && < 0.2
    , directory >= 1.2
    , lens >= 4.4 && < 5
    , linear >= 1.10 && < 2
    , old-locale >= 1.0
    , optparse-applicative >= 0.9
    , shelly >= 1.5
    , text >= 1.1
    , time >= 1 && < 2
    , thyme >= 0.3.5 && < 0.4
    , transformers >= 0.3 && < 0.5
    , trifecta >= 1.4.3 && < 2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -threaded -fwarn-incomplete-uni-patterns

test-suite hlint
  hs-source-dirs:      tests
  main-is:             hlint.hs
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -rtsopts -with-rtsopts=-N -threaded
  default-language:    Haskell2010
  build-depends:
      base
    , hlint >= 1.8

test-suite tasty
  hs-source-dirs:      tests
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  c-sources:           cbits/crc16.c
  ghc-options:         -Wall -Werror -threaded -O2
  build-depends:
      base >= 4 && < 5
    , bytestring >= 0.10 && < 0.11
    , crc16 >= 0.1 && < 0.2
    , tasty >= 0.7
    , tasty-quickcheck >= 0.8
    , QuickCheck >= 2.7 && < 3

  default-language:    Haskell2010
